--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -15,20 +15,31 @@ linters:
     - durationcheck
     - errcheck
     - errchkjson
+    - errname
     - errorlint
+    - exhaustive
+    # - exhaustivestruct # Deprecated.
+    # - exhaustruct
     - exportloopref
+    - forbidigo
+    # - forcetypeassert
     - funlen
     - gci
     - gochecknoglobals
     - gochecknoinits
     - gocognit
+    - goconst
     - gocritic
     - gocyclo
     - godot
+    - godox
+    # - goerr113
     - gofmt
     - gofumpt
     - goheader
     - goimports
+    # - golint # Deprecated.
+    # - gomnd
     - gomoddirectives
     - gomodguard
     - goprintffuncname
@@ -39,9 +50,12 @@ linters:
     - ifshort
     - importas
     - ineffassign
+    # - interfacer # Deprecated.
+    # - ireturn
     - lll
     - maintidx
     - makezero
+    # - maligned # Deprecated.
     - misspell
     - nakedret
     - nestif
@@ -50,15 +64,20 @@ linters:
     - nlreturn
     - noctx
     - nolintlint
+    # - nonamedreturns
+    - nosprintfhostport
     - paralleltest
     - prealloc
     - predeclared
+    - promlinter
     - revive
     - rowserrcheck
+    # - scopelint # Deprecated.
     - sqlclosecheck
     - staticcheck
     - structcheck
     - stylecheck
+    # - tagliatelle
     - tenv
     - testpackage
     - thelper
@@ -71,40 +90,24 @@ linters:
     - varnamelen
     - wastedassign
     - whitespace
-    - errname
-    - exhaustive
-    - forbidigo
-    - goconst
-    - godox
-    - promlinter
-    - wsl
-    # - exhaustivestruct
-    # - forcetypeassert
-    # - goerr113
-    # - golint
-    # - gomnd
-    # - interfacer
-    # - ireturn
-    # - maligned
-    # - scopelint
-    # - tagliatelle
     # - wrapcheck
+    - wsl
 issues:
   max-same-issues: 0
   max-issues-per-linter: 0
   include:
-    - EXC0001
-    - EXC0002
-    - EXC0003
-    - EXC0004
-    - EXC0005
-    - EXC0006
-    - EXC0007
-    - EXC0008
-    - EXC0009
-    - EXC0010
-    - EXC0011
-    - EXC0012
-    - EXC0013
-    - EXC0014
-    - EXC0015
+    - EXC0001 # Do not ignore errors.
+    - EXC0002 # Actually require docs for exports.
+    - EXC0003 # Don't name packages "test".
+    # - EXC0004 # Unsafe pointers.
+    - EXC0005 # No ineffective breaks.
+    # - EXC0006 # Unsafe pointers.
+    # - EXC0007 # exec calls with variables.
+    # - EXC0008 # Duplicates.
+    - EXC0009 # File permissions.
+    # - EXC0010 # File inclusion via variable.
+    # - EXC0011 # Comment style checks.
+    - EXC0012 # Actually require docs for exports.
+    - EXC0013 # Actually require docs for exports.
+    - EXC0014 # Actually require docs for exports.
+    - EXC0015 # Actually require docs for exports.
